FISH-6432 Applications Take Longer To Deploy on JDK 17